<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperScannr</string>
    <string name="action_settings">Settings</string>
    <string name="title_order_archive">Archive</string>
    <string name="title_order_info_template">Info template</string>
    <string name="title_email_template">Email template</string>
    <string name="title_main">Main</string>
    <string name="title_scan_items">Items</string>
    <string name="title_active_order_info">Info</string>
    <string name="title_active_order_footer">Values</string>
    <string name="title_file">Files</string>
    <string name="title_send_email">Send email</string>
    <string name="no_active_order">No active order</string>
    <string name="error_getting_barcode">No scan data received. Please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipient">Recipient:</string>
    <string name="from">From:</string>
    <string name="subject">Subject:</string>
    <string name="body">Body:</string>
    <string name="title">Title:</string>
    <string name="company">Company:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="scrap_copper">Scrap copper:</string>
    <string name="empty_reels">Empty reels:</string>
    <string name="total_pallets">Total quantity of pallets:</string>
    <string name="total_products">Total quantity of products:</string>
    <string name="activeOrderHeader">Order info</string>
    <string name="order_template_save_message">Order template saved.</string>
    <string name="email_template_save_message">Email template saved.</string>
    <string name="active_order_header_save_message">Active order header saved.</string>
    <string name="active_order_footer_save_message">Active order footer saved.</string>
    <string name="active_order_email_save_message">Active order email saved.</string>
    <string name="new_order_made_message">Made you some new order.</string>
    <string name="date">Date:</string>
    <string name="name">Name:</string>
    <string name="orders_delete_message">Orders deleted.</string>
    <string name="order_activated_message">Order activated</string>
    <string name="pdf_create_message">PDF created</string>
    <string name="pdf_location">Pdf location:</string>
    <string name="not_found">Not found</string>
    <string name="attachments_title">Attachments:</string>
    <string name="email_sent_message">Email sent</string>
    <string name="email_not_sent_message">Could not send email</string>
    <string name="no_attachments_message">No attachments</string>
    <string name="items_saved_message">Items saved</string>
    <string name="scan_row_title">Item</string>
    <string name="items_deleted_message">Items deleted</string>
    <string name="row_quantity_title">Qty:</string>
    <string name="scan_new">Scan item</string>
    <string name="scan_material_code">Scan material code</string>
    <string name="scan_sales_order">Scan sales order</string>
    <string name="order_number">Order number</string>
    <string name="toggle_material_code_on_off">Material code</string>
    <string name="toggle_sales_order_on_off">Sales order</string>
    <string name="toggle_order_number_on_off">Order number</string>
    <string name="quantity">Quantity</string>
    <string name="item_edit_dialog">Edit item</string>
    <string name="order_number_exists">Item with that order number already exists</string>
    <string name="xls_create_message">XLS created.</string>
    <string name="save">Save</string>
    <string name="delete_order">Delete order</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>

</resources>
