<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activeOrderHeader"
            android:id="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/titleOne"
            android:background="@color/titleOne"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:drawableTop="@drawable/ic_save"
            android:id="@+id/activeOrderHeaderSaveButton" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:onClick="onActiveOrderHeaderSaveClicked" android:minHeight="80dp" android:minWidth="100dp"
            android:textSize="12sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/activeOrderHeaderTitleTitle" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activeOrderHeaderTitleView" android:layout_below="@+id/activeOrderHeaderTitleTitle"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/company"
            android:id="@+id/activeOrderHeaderCompanyTitle" android:layout_below="@+id/activeOrderHeaderTitleView"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activeOrderHeaderCompanyView" android:layout_below="@+id/activeOrderHeaderCompanyTitle" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/address"
            android:id="@+id/activeOrderHeaderAddressTitle" android:layout_below="@+id/activeOrderHeaderCompanyView"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activeOrderHeaderAddressView" android:layout_below="@+id/activeOrderHeaderAddressTitle"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/city"
            android:id="@+id/activeOrderHeaderCityTitle" android:layout_below="@+id/activeOrderHeaderAddressView"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activeOrderHeaderCityView"
            android:layout_below="@+id/activeOrderHeaderCityTitle" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
</RelativeLayout>