<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:padding="5dp" android:layout_alignParentTop="true" android:id="@+id/orderTemplateTitleLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title"
                android:id="@+id/orderTemplateTitleTitle"  android:textStyle="bold" android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderTemplateTitleView" android:alpha="0.5"
                android:padding="5dp" android:background="@drawable/round_edittext" android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:padding="5dp" android:id="@+id/orderTemplateCompanyLayout" android:layout_below="@+id/orderTemplateTitleLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/company"
                android:id="@+id/orderTemplateCompanyTitle" android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderTemplateCompanyView"  android:padding="5dp"
                android:background="@drawable/round_edittext" android:alpha="0.5" android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:padding="5dp" android:id="@+id/orderTemplateAddressLayout" android:layout_below="@+id/orderTemplateCompanyLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address"
                android:id="@+id/orderTemplateAddressTitle" android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderTemplateAddressView" android:alpha="0.5"
                android:padding="5dp" android:background="@drawable/round_edittext" android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/orderTemplateCityLayout"
            android:layout_below="@+id/orderTemplateAddressLayout">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/city"
                android:id="@+id/orderTemplateCityTitle" android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderTemplateCityView"
                android:background="@drawable/round_edittext" android:alpha="0.5"
                android:padding="5dp" android:inputType="text"/>
    </LinearLayout>
</RelativeLayout>