<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activeScrapCopperLayout"
            android:padding="5dp"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scrap_copper"
                android:id="@+id/footerCopperTitle"
                android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footerScraCopperView"
                android:inputType="number"
                android:autoText="false"
                android:background="@drawable/round_edittext" android:padding="5dp" android:alpha="0.5"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activeScrapCopperLayout" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/activeEmptyReelsLayout" android:padding="5dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/empty_reels"
                android:id="@+id/footerEmptyReelsTitle"
                android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footerEmptyReelsView"
                android:inputType="number"
                android:background="@drawable/round_edittext"
                android:padding="5dp" android:alpha="0.5"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/activeEmptyReelsLayout"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:id="@+id/activeTotalPalletsLayout" android:padding="5dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total_pallets"
                android:id="@+id/footerTotalPalletsTitle"
                android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footerTotalPalletsView"
                android:inputType="number"
                android:background="@drawable/round_edittext" android:padding="5dp" android:alpha="0.5"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/activeTotalProductsLayout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/activeTotalPalletsLayout"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:baselineAligned="true"
            android:padding="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total_products"
                android:id="@+id/footerTotalProductsTitle"
                android:textStyle="bold"
                android:alpha="0.5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footerTotalProductsView"
                android:inputType="number"
                android:background="@drawable/round_edittext" android:padding="5dp" android:alpha="0.5"/>
    </LinearLayout>
</RelativeLayout>